2.1.0/_sources/gallery/lines_bars_and_markers/barh.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers_barh.py:


====================
Horizontal bar chart
====================

This example showcases a simple horizontal bar chart.




.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_barh_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    plt.rcdefaults()
    fig, ax = plt.subplots()

    # Example data
    people = ('Tom', 'Dick', 'Harry', 'Slim', 'Jim')
    y_pos = np.arange(len(people))
    performance = 3 + 10 * np.random.rand(len(people))
    error = np.random.rand(len(people))

    ax.barh(y_pos, performance, xerr=error, align='center',
            color='green', ecolor='black')
    ax.set_yticks(y_pos)
    ax.set_yticklabels(people)
    ax.invert_yaxis()  # labels read top-to-bottom
    ax.set_xlabel('Performance')
    ax.set_title('How fast do you want to go today?')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.023 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: barh.py <barh.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: barh.ipynb <barh.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
